--- a/stylesheets/views/_home.scss
+++ b/stylesheets/views/_home.scss
@@ -411,3 +411,14 @@ body {
     color: rgb(100, 199, 226);
   }
 }
+.boton-contactanos{
+    margin-top: 24px;
+  font-size: 17px;
+  background-color: #FF3A00;
+  border-color: transparent;
+}
+.btn-circulo-3{
+  border-radius: 100%;
+  position: absolute;
+  margin-top: 30;
+}
