--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -5893,4 +5893,16 @@ body {
   .farolito-para-empresas span {
     color: #64c7e2; }
 
+.boton-contactanos {
+  margin-top: 24px;
+  font-size: 17px;
+  background-color: #FF3A00;
+  border-color: transparent; }
+
+.btn-circulo-3 {
+  border-radius: 100%;
+  position: absolute;
+  margin-left: -33px;
+  margin-top: 30; }
+
 /*# sourceMappingURL=main.css.map */
