--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -5869,9 +5869,6 @@ body {
   margin-bottom: 70px; }
 
 .farolito-para-empresas {
-  padding: 0 10%;
-  margin-left: 0;
-  margin-right: 0;
   text-align: center; }
   .farolito-para-empresas h3 {
     text-align: center;
@@ -5901,8 +5898,345 @@ body {
 
 .btn-circulo-3 {
   border-radius: 100%;
-  position: absolute;
-  margin-left: -33px;
+  margin-top: 30;
+  margin-bottom: -33px; }
+
+.titulo {
+  color: #EFEC29; }
+
+.farolito-para-educacion {
+  text-align: center;
+  background-color: #77d248; }
+  .farolito-para-educacion img {
+    border-radius: 50px; }
+  .farolito-para-educacion h3 {
+    text-align: center;
+    padding: 10% 0 0;
+    color: white;
+    font-size: 35px; }
+  .farolito-para-educacion h4 {
+    text-align: center;
+    font-size: 25px;
+    color: white; }
+  .farolito-para-educacion hr {
+    border-top: 2px dashed white;
+    width: 477px; }
+  .farolito-para-educacion p {
+    text-align: center;
+    font-size: 18px;
+    color: white; }
+  .farolito-para-educacion .col-md-4 {
+    margin-top: 30px; }
+  .farolito-para-educacion span {
+    color: #64c7e2; }
+
+.boton-contactanos {
+  margin-top: 24px;
+  font-size: 17px;
+  background-color: #FF3A00;
+  border-color: transparent; }
+
+.boton-contactanos-educacion {
+  margin-top: 24px;
+  font-size: 17px;
+  background-color: transparent;
+  border-color: white; }
+
+.btn-circulo-3 {
+  border-radius: 100%;
   margin-top: 30; }
+
+.lista-oportunidades {
+  background-image: url(../img/img-03.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 142%; }
+  .lista-oportunidades .row {
+    padding: 0 20%; }
+  .lista-oportunidades h4 {
+    color: #5be7f9;
+    text-decoration: underline; }
+  .lista-oportunidades h3 {
+    text-align: center;
+    color: #bdbcbc;
+    margin-top: 82px;
+    font-size: 30px; }
+  .lista-oportunidades hr {
+    border-top: 2px dashed #BDBCBC; }
+
+.boton-ver-mas {
+  background-color: transparent;
+  border-color: red;
+  color: red; }
+
+.boton-ver-izquierda {
+  text-align: right; }
+
+.btn-ver-todos {
+  text-align: center; }
+
+.btn-ver {
+  background-color: gray;
+  color: white;
+  margin-bottom: 35px;
+  margin-top: 35px;
+  border-color: transparent; }
+
+.ultimo {
+  text-align: center; }
+
+.texto {
+  height: 100px; }
+
+.lorem {
+  background-color: #d2cdcb;
+  padding: 30px;
+  height: 195%; }
+
+.lorem:hover {
+  background-color: #ffc10d; }
+
+.btn-circulo-4 {
+  margin-top: 113px;
+  border-radius: 100%; }
+
+.blog-farolito h3 {
+  padding: 6% 0 0;
+  text-align: center;
+  padding: 6% 0 0; }
+.blog-farolito img {
+  border-radius: 50px; }
+.blog-farolito p {
+  text-align: center;
+  margin-top: 30px;
+  font-size: 18px; }
+
+.img-farolito {
+  text-align: center;
+  margin-bottom: -20px; }
+
+.row-2 {
+  height: 40%;
+  padding: 0% 145px; }
+
+.ver-todos {
+  width: 160px;
+  height: 45px;
+  margin-top: 70px; }
+
+.btn-circulo-4 {
+  border-radius: 100%;
+  margin-bottom: -33px;
+  margin-top: -25px; }
+
+a {
+  color: #3B4147;
+  text-decoration: none; }
+
+a:hover {
+  color: #3B4147;
+  text-decoration: none; }
+
+/*formulario*/
+.contacto {
+  text-align: center;
+  padding: 25px;
+  font-size: 25px;
+  padding-left: 65px;
+  padding-bottom: 19px;
+  color: black; }
+
+.formulario {
+  border: solid 0px #EFEAEA;
+  margin: 0 auto;
+  width: 580px;
+  padding-top: 15px; }
+
+.form {
+  text-align: center; }
+
+.formulario h1 {
+  font-size: 24px;
+  margin-bottom: 10px; }
+
+.formulario label {
+  display: block;
+  text-align: right;
+  width: 140px;
+  float: left;
+  padding: 10px;
+  font-family: 'Roboto', sans-serif; }
+
+.formulario .detalle {
+  color: #666666;
+  display: block;
+  font-size: 11px;
+  font-weight: normal;
+  text-align: right;
+  width: 140px; }
+
+.formulario input {
+  float: left;
+  font-size: 12px;
+  padding: 4px 32px;
+  border: solid 1px #CCD7D8;
+  width: 52%;
+  margin: 2px 0 20px 10px;
+  height: 40px;
+  margin-left: 138px; }
+
+form .form {
+  width: 485px;
+  height: 298px; }
+
+input .name {
+  height: 35px; }
+
+input#password.mensaje {
+  height: 111px; }
+
+textarea {
+  width: 52%;
+  margin: 9px;
+  resize: none;
+  padding: 25px 33px;
+  border: 1px solid #ccd7d8; }
+
+.button {
+  padding-left: 2px;
+  margin-top: 10px;
+  border-top-width: 0px;
+  margin-left: 21%; }
+
+form {
+  margin-bottom: 0em; }
+
+.consulta {
+  background-color: #bdbcbc; }
+
+.footer {
+  background-color: gray;
+  padding-left: 30px; }
+  .footer img {
+    border-radius: 50px;
+    float: left;
+    padding: 8px;
+    margin-top: -22px; }
+  .footer h5 {
+    text-align: right;
+    color: white;
+    margin-right: 36px; }
+
+.defaul-3 {
+  background-color: #dbf5f7;
+  border-color: transparent; }
+
+.sobre-nosotros {
+  background-image: url(../img/img_nosotros-02.png);
+  height: 70%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-top: -78px; }
+  .sobre-nosotros .row {
+    padding-top: 85px; }
+  .sobre-nosotros h3 {
+    color: white;
+    text-align: center;
+    margin-bottom: 35px; }
+  .sobre-nosotros p {
+    color: white;
+    text-align: center;
+    font-size: 20px; }
+
+.btn-circular-nosotros {
+  position: absolute;
+  bottom: 176px;
+  border-radius: 40px; }
+
+.fundadores .row {
+  padding: 10% 100px; }
+.fundadores .col-md-4 {
+  text-align: center; }
+.fundadores h4 {
+  color: #55bacd;
+  font-size: 27px; }
+.fundadores h5 {
+  font-size: 20px; }
+
+.fila-2 {
+  margin-top: -127px; }
+
+.fundadores img {
+  width: 70%;
+  height: 200px;
+  border-radius: 100%;
+  border: 2px solid #C0B1B2;
+  margin: 2%;
+  padding: 1%; }
+
+hr {
+  border-top: 2px dashed #938e8a;
+  width: 477px; }
+
+h3 {
+  text-align: center;
+  margin-top: 76px;
+  font-size: 43px; }
+
+.asesor {
+  text-align: center;
+  font-size: 43px;
+  margin-top: -25px;
+  margin-bottom: 30px; }
+
+.asesores img {
+  height: 195px;
+  width: 200px;
+  border-radius: 100%;
+  border: 2px solid #C0B1B2;
+  margin: 2%;
+  padding: 1%; }
+.asesores .row {
+  padding: 6% 130px; }
+.asesores .col-md-6 {
+  text-align: center; }
+.asesores h4 {
+  color: #55bacd;
+  font-size: 27px; }
+.asesores h5 {
+  font-size: 20px; }
+
+.test-advisor {
+  text-align: center; }
+  .test-advisor .row {
+    padding: 6% 130px; }
+  .test-advisor h4 {
+    color: #55bacd;
+    font-size: 27px; }
+  .test-advisor h5 {
+    font-size: 20px; }
+
+.btn-circular-test {
+  position: absolute;
+  border-radius: 40px;
+  margin-top: -38px; }
+
+.genios {
+  background-color: #ff6a49; }
+  .genios img {
+    margin-top: 125px;
+    border-radius: 85px; }
+  .genios p {
+    margin-bottom: 0px;
+    text-align: center;
+    font-size: 30px;
+    color: white; }
+  .genios hr {
+    border-top: 2px dashed #FFFFFF;
+    width: 477px; }
+  .genios h5 {
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 0px; }
 
 /*# sourceMappingURL=main.css.map */
