--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -5544,6 +5544,11 @@ body {
   background-color: transparent;
   border-color: transparent; }
 
+.navegacion {
+  background-color: blue;
+  border-color: transparent;
+  position: fixed; }
+
 .navbar-nav {
   float: none;
   text-align: right; }
@@ -5556,8 +5561,11 @@ body {
   font-size: 20px; }
 
 .navbar-2 {
-  margin-right: 489px;
-  margin-top: -48px; }
+  float: left;
+  margin-left: 20px; }
+
+.collapse {
+  height: 100%; }
 
 .navegacion-2 {
   background-color: #f2fdff;
@@ -5578,9 +5586,9 @@ body {
   margin-top: 80px; }
 
 .logo-2 {
-  margin-top: 35px; }
+  margin-top: 35px;
+  text-align: center; }
   .logo-2 img {
-    margin-left: 166px;
     height: 61px; }
 
 .portada2 {
@@ -5625,10 +5633,8 @@ body {
   color: #30C2E3; }
 
 .p-medium {
-  margin-right: 66px;
   font-size: 17px;
   text-align: -webkit-center;
-  margin-left: 100px;
   color: gray; }
 
 .red {
@@ -5768,6 +5774,27 @@ body {
     width: 121px;
     height: 57px; }
 
+.metodologia-2 {
+  padding-top: 40px; }
+  .metodologia-2 p {
+    font-size: 35px;
+    color: #30c2e3;
+    text-align: center;
+    margin: 0 0 -12px;
+    padding: 35px; }
+  .metodologia-2 .tex-2-responsive p {
+    font-size: 18px;
+    color: #aba5a5;
+    text-align: center;
+    margin: 17px 0 -12px;
+    letter-spacing: 0.05em; }
+  .metodologia-2 h4 {
+    font-size: 25px;
+    color: #ff6a49;
+    text-align: center; }
+  .metodologia-2 hr {
+    border-top: 2px dashed #FF6A49; }
+
 .btn-circulo-2 {
   border-radius: 100%;
   position: absolute;
@@ -5776,12 +5803,38 @@ body {
 
 .postulantes {
   background-image: url(../img/img-02.png);
-  /*background-size: 100% 92%;*/
   background-repeat: no-repeat; }
   .postulantes .row {
     padding: 0 10%;
     margin-left: 0;
     margin-right: 0; }
+
+.postulantes-2 {
+  color: white;
+  background-image: url(../img/img-02.png);
+  background-repeat: no-repeat;
+  background-size: 400%; }
+  .postulantes-2 h1 {
+    text-align: center;
+    color: white;
+    padding: 6%; }
+  .postulantes-2 li {
+    list-style: none; }
+    .postulantes-2 li img {
+      border-radius: 100px;
+      height: 70px;
+      margin-top: 25px; }
+  .postulantes-2 hr {
+    border-top: 2px dashed #FFFFFF;
+    text-align: center;
+    width: 500px; }
+  .postulantes-2 h3 {
+    margin-top: 0px;
+    font-size: 25px; }
+
+.numeros-responsive {
+  text-align: center;
+  padding: 5%; }
 
 .farolito {
   text-align: center;
@@ -5797,11 +5850,11 @@ body {
 
 .numeros {
   list-style: none;
-  margin-top: -66px; }
+  margin-top: -45px; }
   .numeros li {
     margin: 160% 0; }
   .numeros img {
-    width: 96px; }
+    width: 65px; }
 
 .titulos {
   list-style: none;
@@ -5829,7 +5882,7 @@ body {
   border-bottom: 3px dashed #F6F3F2;
   -webkit-transform: translateY(32px) translateX(490%) rotate(90deg);
   position: absolute;
-  bottom: -233%;
+  bottom: -235%;
   left: -18px;
   -moz-transform: translateY(10px) translateX(42px) rotate(53deg);
   width: 123px;
@@ -5839,7 +5892,7 @@ body {
   border-bottom: 3px dashed #F6F3F2;
   -webkit-transform: translateY(276px) translateX(490%) rotate(90deg);
   position: absolute;
-  bottom: -233%;
+  bottom: -236%;
   left: -18px;
   -moz-transform: translateY(10px) translateX(42px) rotate(53deg);
   width: 123px;
@@ -5849,7 +5902,7 @@ body {
   border-bottom: 3px dashed #F6F3F2;
   -webkit-transform: translateY(513px) translateX(490%) rotate(90deg);
   position: absolute;
-  bottom: -233%;
+  bottom: -236%;
   left: -18px;
   -moz-transform: translateY(10px) translateX(42px) rotate(53deg);
   width: 123px;
@@ -5872,7 +5925,6 @@ body {
   text-align: center; }
   .farolito-para-empresas h3 {
     text-align: center;
-    padding: 10% 0 0;
     color: #ff6a49;
     font-size: 35px; }
   .farolito-para-empresas h2 {
@@ -5880,7 +5932,7 @@ body {
     font-size: 25px;
     color: #bdbcbc; }
   .farolito-para-empresas hr {
-    border-bottom: 2px dashed #ff6a49;
+    border-top: 2px dashed #ff6a49;
     width: 477px; }
   .farolito-para-empresas p {
     text-align: center;
@@ -5891,6 +5943,7 @@ body {
     color: #64c7e2; }
 
 .boton-contactanos {
+  margin-bottom: 30px;
   margin-top: 24px;
   font-size: 17px;
   background-color: #FF3A00;
@@ -5937,6 +5990,7 @@ body {
   border-color: transparent; }
 
 .boton-contactanos-educacion {
+  margin-bottom: 30px;
   margin-top: 24px;
   font-size: 17px;
   background-color: transparent;
@@ -5996,10 +6050,6 @@ body {
 .lorem:hover {
   background-color: #ffc10d; }
 
-.btn-circulo-4 {
-  margin-top: 113px;
-  border-radius: 100%; }
-
 .blog-farolito h3 {
   padding: 6% 0 0;
   text-align: center;
@@ -6026,8 +6076,8 @@ body {
 
 .btn-circulo-4 {
   border-radius: 100%;
-  margin-bottom: -33px;
-  margin-top: -25px; }
+  margin-top: 100px;
+  margin-bottom: -30px; }
 
 a {
   color: #3B4147;
